--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                 <h3 class="text-2xl font-bold mb-3">10-Academy Clone</h3>
                 <p class="text-sm font-bold text-blue-500  tracking-widest mb-5">HTML, pure CSS and JavaScript</p>
                 <p class="text-slate-500 dark:text-slate-400 mb-8">A comprehensive learning management platform replica featuring professional course layouts.</p>
-                <a href="#" class="inline-flex items-center gap-2 font-bold hover:text-blue-500 transition-colors">Explore <i data-lucide="external-link" size="16"></i></a>
+                <a href="https://boni-hd.github.io/10-Academy-Clone/" class="inline-flex items-center gap-2 font-bold hover:text-blue-500 transition-colors">Explore <i data-lucide="external-link" size="16"></i></a>
             </div>
             <div class="p-10 rounded-[3rem] border border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900/50 hover:border-blue-500/50 transition-all duration-300 group">
                 <h3 class="text-2xl font-bold mb-3">Ethiopian Airlines DB</h3>
                 <p class="text-sm font-bold text-blue-500 uppercase tracking-widest mb-5"> MySQL</p>
                 <p class="text-slate-500 dark:text-slate-400 mb-8">Designed a robust relational database system to manage flight schedules and logistics.</p>
-                <a href="#" class="inline-flex items-center gap-2 font-bold hover:text-blue-500 transition-colors">Explore <i data-lucide="external-link" size="16"></i></a>
+                <a href="https://github.com/BONI-HD/Database-Project" class="inline-flex items-center gap-2 font-bold hover:text-blue-500 transition-colors">Explore <i data-lucide="external-link" size="16"></i></a>
             </div>
         </div>
     </section>
